tests/NormalTests/paczka1/fuzzy1/29491536.err
Error in line 12: R2McJZB2 S428 20,8
Error in line 19: S160 A765 88,7
Error in line 20: COfhPOdVq4 S428 77,5
Error in line 30: R2McJZB2 A765 153,7
Error in line 26: C0r S428 49,6
